Added Register page

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,8 @@
             <li><a href="/">Home</a></li>
             <li><a href="/products">Products</a></li>
             <li><a href="/contact">Contact Us</a></li>
+            <li><a href="/login"> Login</a></li>
+            <li><a href="/register">Register</a></li>
         </ul>
     </nav>
 
@@ -90,7 +92,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 202 Virtual Try-On. All rights reserved.</p>
+        <p>&copy; 2024 Virtual Try-On. All rights reserved.</p>
         <p>Contact us: info@virtualtryon.com | Phone: +1 234 567 890</p>
         <p>
             <a href="#" class="footer-link">Privacy Policy</a> |
