latest update after presenting

--- a/templates/home.html
+++ b/templates/home.html
@@ -93,7 +93,7 @@
     <!-- Footer -->
     <footer>
         <p>&copy; 2024 Virtual Try-On. All rights reserved.</p>
-        <p>Contact us: info@virtualtryon.com | Phone: +1 234 567 890</p>
+        <p>Contact us: info@virtualtryon.com | Phone: +91 8431642320</p>
         <p>
             <a href="#" class="footer-link">Privacy Policy</a> |
             <a href="#" class="footer-link">Terms of Service</a> |
