--- a/static/css/style.css
+++ b/static/css/style.css
@@ -440,6 +440,8 @@ footer {
     text-decoration: underline;
 }
 
+
+/*Login page*/
 .login-container {
     background-color: white;
     padding: 40px;
